# CiteWeave

./: .env_template  .gitignore  Development_Logs.md  Dockerfile  QDRANT_MIGRATION_SUMMARY.md  README.md  README.zh.md  config.env.example  docker-compose.arm64.yml  docker-compose.mounts.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.sh  setup.sh
config/: model_config.json  neo4j_config.json  paths.json  qdrant_config.json
data/: author_paper_index.db
docs/: DEPLOYMENT.md  data_flow.md  mineru_usage.md  multiprocessing_batch_upload.md  resume_batch_upload.md  trace_storage_guide.md
examples/: batch_upload_demo.py  database_integration_example.py  enhanced_multi_agent_demo.py  enhanced_tracing_demo.py  information_confirmation_demo.py  interactive_chat_demo.py  optimized_tracing_demo.py  trace_storage_demo.py  unified_cli_demo.py
product_planning/: Development_Logs.md  PHASE1_IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md  RAG_OPTIMIZATION_PLAN.md  README.md
prompts/: extract_reference_section.txt
qdrant_config/: qdrant.yaml
scripts/: check_trace_logs.py  enhanced_trace_checker.py  manage_qdrant.py  setup_all_services.py  setup_data_directories.py  setup_deployment.sh  setup_qdrant_server.py  start_services.py
src/: __init__.py  argument_classifier.py  citation_parser.py  cli.py  config_manager.py  database_integrator.py  document_processor.py  enhanced_llm_manager.py  enhanced_multi_agent_system.py  graph_builder.py  llm_interface.py  multi_agent_query_system.py  multi_agent_research_system.py  paper_id_utils.py  (+5 more)
(+135 files in other folders)
